# ground-service-interface

./: README.md
gsi-client/: README.md  package-lock.json  package.json
gsi-client/src/: App.vue
gsi-client/src-tauri/: Cargo.toml  tauri.conf.json
gsi-server/: Cargo.toml
gsi-server/src/: main.rs
